# Investment-Portfolio-Manager

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  FUND_HISTORY_IMPLEMENTATION_PYTHON.md  Makefile  PR_DESCRIPTION.md  README.md  RELEASE_1.5.3.md  RELEASE_NOTES_1.3.2.md  RELEASE_NOTES_1.3.3.md  RELEASE_NOTES_1.3.3_DRAFT.md  RELEASE_NOTES_1.3.3_PHASE_5_FINAL.md  RELEASE_NOTES_1.3.3_PHASE_5_PROGRESS.md  SWAGGER_API_RELEASE_DRAFT.md  TODO.md  biome.json  data  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: backend-ci.yml  docker-test.yml  frontend-ci.yml
.interface-design/: system.md
backend/: .coverage  .dockerignore  .env.example  .flake8  .gitignore  Dockerfile  Makefile  dev-requirements.txt  docker-entrypoint.sh  go.mod  go.sum  mypy.ini  pytest.ini  requirements.txt  run.py
backend/app/: cli_commands.py  models.py  seed_data.py
backend/app/api/: __init__.py  common_models.py  developer_namespace.py  dividend_namespace.py  fund_namespace.py  ibkr_namespace.py  portfolio_namespace.py  system_namespace.py  transaction_namespace.py
backend/app/constants/: __init__.py  ibkr_constants.py
backend/app/routes/: developer_routes.py  dividend_routes.py  fund_routes.py  ibkr_routes.py  portfolio_routes.py  system_routes.py  transaction_routes.py
backend/app/services/: developer_service.py  dividend_service.py  fund_matching_service.py  fund_service.py  ibkr_config_service.py  ibkr_flex_service.py  ibkr_transaction_service.py  logging_service.py  portfolio_history_materialized_service.py  portfolio_service.py  price_update_service.py  symbol_lookup_service.py  system_service.py  transaction_service.py
backend/app/tasks/: ibkr_import.py  price_updates.py
backend/app/utils/: security.py
backend/cmd/server/: main.go
backend/data/ibkr_debug/: .gitignore
backend/internal/api/: router.go
backend/internal/database/: migrate_test.go
backend/internal/ibkr/: ibkr.go
backend/migrations/: alembic.ini  env.py
backend/scripts/: check-golden-schema.sh  fix_line_length.py
backend/tests/: PHASE_4_STANDARDIZATION_COMPLETE.md  STANDARDIZATION_GUIDE.md  __init__.py  conftest.py  factories.py  test_config.py  test_dividend_service.py  test_fund_service.py  test_helpers.py  test_ibkr_config_service.py  test_portfolio_performance.py  test_portfolio_service.py  test_transaction_service.py
docs/: API_DOCUMENTATION.md  ARCHITECTURE.md  COMPONENTS.md  CONFIGURATION.md  CONTRIBUTING.md  CSS.md  DATA.md  DEVELOPMENT.md  DISABLED_ENDPOINTS.md  DOCKER.md  FUND_PRICE_UNIQUE_CONSTRAINT.md  IBKR_FEATURES.md  IBKR_SETUP.md  IBKR_TRANSACTION_LIFECYCLE.md  MATERIALIZED_VIEW_IMPLEMENTATION.md  MIGRATION_GUIDE.md  MODELS.md  SECURITY.md  TESTING.md  VERSIONING_AND_FEATURES.md
docs/security/: minimatch-eslint-vulnerability.md
frontend/: .dockerignore  .gitignore  DARKMODE_PLAN.md  Dockerfile  MODERNIZATION_2026.md  Makefile  chart-alternatives-demo.html  eslint.config.mjs  modern-showcase.html  nginx.conf  package-lock.json  package.json  playwright.config.js  pnpm-lock.yaml  pnpm-workspace.yaml  vitest.config.js  webpack.config.js
frontend/e2e/: dividends.spec.js  health-check.spec.js  ibkr-config.spec.js  navigation.spec.js  portfolio-management.spec.js  smoke.spec.js  transactions.spec.js
frontend/public/: index.html  manifest.json
frontend/scripts/: jsdoc-coverage.sh
frontend/src/: App.css  App.js  config.js  index.css  setupTests.js
scripts/: sync-precommit-versions.sh  test-docker-integration.sh
templates/: PULL_REQUEST_TEMPLATE.md  README.md  RELEASE_NOTES_TEMPLATE.md
tmp/: ANALYSIS_INDEX.md  executive_summary.md  route_analysis.md
todo/: API_DOCUMENTATION_FLASK_RESTX_PLAN.md  API_DOCUMENTATION_GENERATION_PLAN.md  CURRENCY_CONVERSION_PLAN.md  DEPRECATION_WARNINGS_TODO.md  ERROR_PATH_TESTING_PLAN.md  ERROR_PATH_TESTING_TRACKER.md  PERFORMANCE_OPTIMIZATION_PLAN.md  PHASE_4_REMAINING_SERVICES.md  README.md  RELEASE_1.3.3_CLEANUP_SUMMARY.md  ROUTE_REFACTORING_REMEDIATION_PLAN.md  TESTING_PLAN_1.3.3.md  TESTING_PLAN_1.3.5.md  TESTING_QUICK_WINS.md  TESTING_VALIDATION_IMPROVEMENTS.md  TODO.md
(+294 files in other folders)
