[project]
name = "investment-portfolio-manager"
version = "1.5.7"
description = "Investment Portfolio Manager - Backend API"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # Production dependencies - PINNED for stability
    "APScheduler==3.11.1",
    "click==8.3.1",
    "Flask==3.1.3",
    "Flask-Cors==6.0.1",
    "Flask-Migrate==4.1.0",
    "Flask-RESTx==1.3.2",
    "Flask-SQLAlchemy==3.1.1",
    "python-dotenv==1.2.1",
    "SQLAlchemy==2.0.44",
    "Werkzeug==3.1.6",
    "yfinance==0.2.66",
    "cryptography==46.0.5",
    "requests==2.32.5",
    "urllib3==2.6.3",
    "protobuf==6.33.5",
]

[dependency-groups]
dev = [
    # Testing
    "pytest>=8.0.0,<9.0.0",
    "pytest-flask>=1.3.0,<2.0.0",
    "pytest-cov>=6.0.0,<7.0.0",
    "pytest-mock>=3.14.0,<4.0.0",
    "pytest-timeout>=2.3.0,<3.0.0",
    "responses>=0.25.0,<1.0.0",
    "freezegun>=1.5.0,<2.0.0",
    "factory-boy>=3.3.0,<4.0.0",
    "faker>=33.0.0,<34.0.0",
    # Linting and formatting
    "ruff>=0.8.0,<1.0.0",
]

[tool.ruff]

# Same as Black
line-length = 100
indent-width = 4

# Assume Python 3.13
target-version = "py313"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"
# Indent with spaces
indent-style = "space"
# Line ending style
line-ending = "auto"

[tool.ruff.lint]
# Enable flake8-docstrings (pydocstyle)
select = [
      "E",      # pycodestyle errors
      "F",      # pyflakes
      "D",      # pydocstyle (docstrings)
      "I",      # isort (import sorting)
      "B",      # flake8-bugbear (likely bugs and design problems)
      "C4",     # flake8-comprehensions (better comprehensions)
      "UP",     # pyupgrade (modern Python syntax)
      "SIM",    # flake8-simplify (simplification suggestions)
      "RUF",    # Ruff-specific rules
      "N",      # pep8-naming (naming conventions)
  ]

ignore = [
    # Existing ignores
    "D202",   # No blank lines allowed after function docstring
    "D212",   # Multi-line docstring summary should start at the first line
    "D400",   # First line should end with a period
    "D403",   # First word of the first line should be properly capitalized
    "F541",   # f-string without any placeholders

    # Additional practical ignores
    "D100",   # Missing docstring in public module
    "D104",   # Missing docstring in public package
    "D107",   # Missing docstring in __init__
    "SIM108", # Use ternary operator instead of if-else (sometimes less readable)
    "B008",   # Do not perform function calls in argument defaults (common in Flask)
]

[tool.pytest.ini_options]
# Default test path
testpaths = ["backend/tests/services", "backend/tests/api"]

# Default command line options
addopts = [
    "--cov=backend/app/services",
    "--cov=backend/app/api",
    # "--cov-report=term-missing",  # Show missing lines in coverage
    # "--cov-report=html",           # Generate HTML coverage report
    "--cov-fail-under=90",          # Make sure we adhere to a min code coverage
    "--tb=short",                  # Short traceback format
    "-q",                          # Quiet mode
     "--strict-markers",            # Raise error on unknown markers
     "--strict-config",             # Raise error on config issues
]

# Filter warnings
filterwarnings = [
    "error",  # Turn warnings into errors for your code
    "ignore::DeprecationWarning:.*site-packages.*",
    "ignore::PendingDeprecationWarning:.*site-packages.*",
]

# Minimum Python version
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# Custom markers (optional - define your own)
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "performance: marks tests as performance tests",
]

[tool.coverage.run]
# Coverage settings
source = ["backend/app/services"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/site-packages/*",
    "*/venv/*",
]
